# csv2json

./: Cargo.toml  README.md  docker-compose.yaml  env.bash  sqlx-data.json  up.bash
migrations/: 20220626080011_create_document_table.sql
src/: csv.rs  handler.rs  lib.rs  logging.rs  main.rs  server.rs
tests/api/: create_document.rs  get_document.rs  main.rs
