[package]
name = "csv2json"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4"
anyhow = "1.0.58"
csv = "1.1.6"
futures-core = "0.3.21"
serde = { version = "1.0.137", features = ["derive"] }
serde_json = "1.0.81"
thiserror = "1.0.31"
tracing = "0.1.29"
tracing-actix-web = "0.5.1"
tracing-bunyan-formatter = "0.3.3"
tracing-log = "0.1.3"
tracing-subscriber = { version = "0.3.11", features = ["registry", "env-filter"] }
uuid = { version = "1.1.2", features = ["serde", "v4"] }

[dependencies.sqlx]
version = "0.6.0"
default-features = false
features = [
    "chrono",
    "json",
    "macros",
    "migrate",
    "offline",
    "postgres",
    "runtime-actix-rustls",
    "uuid"
]

[dev-dependencies]
once_cell = "1.12.0"
reqwest = { version = "0.11.11", default-features = false, features = ["rustls-tls"] }
tokio = { version = "1", features = ["full"] }
